# llama-index-cockroachdb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_usage.py  02_with_openai_embeddings.py  03_load_from_existing_table.py  04_custom_retriever.py  05_async_usage.py  06_mmr_query.py  07_metadata_filters.py  08_walkthrough.ipynb  README.md
