[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-cockroachdb"
version = "0.2.0"
description = "LlamaIndex vector store, reader, retriever, and KV/Doc/Index/Chat storage backends for CockroachDB"
authors = [{name = "Cockroach Labs", email = "support@cockroachlabs.com"}]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "llama-index",
    "cockroachdb",
    "vector-store",
    "c-spann",
    "rag",
    "reader",
    "retriever",
    "kvstore",
    "docstore",
    "index-store",
    "chat-store",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "psycopg2-binary>=2.9.9,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "sqlalchemy-cockroachdb>=2.0.2,<3.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<2.1",
    "llama-index-core>=0.13.0,<0.15",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "testcontainers[postgres]>=4.7",
]

[project.urls]
Homepage = "https://github.com/cockroachdb/llama-index-cockroachdb"
Documentation = "https://www.cockroachlabs.com/docs/stable/vector.html"
Issues = "https://github.com/cockroachdb/llama-index-cockroachdb/issues"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "testcontainers[postgres]>=4.7",
]

[tool.hatch.build.targets.sdist]
include = ["llama_index/"]

[tool.hatch.build.targets.wheel]
include = ["llama_index/"]

[tool.llamahub]
contains_example = true
import_path = "llama_index.vector_stores.cockroachdb"

[tool.llamahub.class_authors]
CockroachDBVectorStore = "cockroachlabs"
CockroachDBReader = "cockroachlabs"
CockroachDBRetriever = "cockroachlabs"
CockroachDBKVStore = "cockroachlabs"
CockroachDBDocumentStore = "cockroachlabs"
CockroachDBIndexStore = "cockroachlabs"
CockroachDBChatStore = "cockroachlabs"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["build", "dist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "integration: marks tests requiring a live CockroachDB instance",
]
